--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 .App {
   text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
+  height        : 40vmin;
   pointer-events: none;
 }
 
@@ -15,13 +20,13 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-height      : 100vh;
+  display         : flex;
+  flex-direction  : column;
+  align-items     : center;
+  justify-content : center;
+  font-size       : calc(10px + 2vmin);
+  color           : white;
 }
 
 .App-link {
@@ -32,7 +37,31 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.logo {
+  top    : 6px;
+  left   : 25px;
+  width  : 173px;
+  height : 52px;
+  opacity: 1;
+}
+
+.subasideorg {
+  top          : 110px;
+  left         : 88px;
+  width        : 167px;
+  height       : 30px;
+  background   : #E8F0FD 0% 0% no-repeat padding-box;
+  border-radius: 15px 0px 0px 15px;
+  opacity      : 1;
+}
+.dashboardborderhead{
+  border: 1px;
+  border-color: #282c34;
+  width: 100%;
 }
